@@ -2,6 +2,8 @@ changelog
 
 === next
 
++ Improved search query parsing.
+
 + Tables
 
 + Reduce retries talking to dumb servers.
